tests/paczka1/small_fuzzy/48165055.err
Error in line 13: PprJA S324 31,02
Error in line 2: RbPt1jv S908 35,4
